TypeChecking/test_cases/good/inherit-io.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class Bad inherits IO {
  x : Int <- 5 ;
} ;
