TypeChecking/test_cases/bad/inherit-string.cl
class Main {
  main( ) : Object { 5 } ; 
} ;

class Bad inherits String {
  x : Int <- 5 ;
} ;
